docs: Update effective dates across legal and policy documents for consistency
- Revised effective dates in the cookie policy, expert service agreement, payment policies, privacy policy, terms of service, and data processing agreement to December 31, 2025, across English, Spanish, Portuguese, and Brazilian Portuguese versions.
- Ensured uniformity in the presentation of effective dates to enhance clarity and compliance.

--- a/src/content/cookie/pt.mdx
+++ b/src/content/cookie/pt.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 # Política de Cookies
 
-_Data de vigência: 16 de abril de 2025_
+_Data de vigência: 31 de dezembro de 2025_
 
 Usamos poucas cookies para que a Eleva.care funcione de forma fiável e segura. Aqui explicamos o que usamos e como pode controlar.
 
