--- a/src/content/expert-agreement/pt-BR.mdx
+++ b/src/content/expert-agreement/pt-BR.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 # Acordo de Serviços para Especialistas
 
-_Data de vigência: 16 de abril de 2025_
+_Data de vigência: 31 de dezembro de 2025_
 
 Bem‑vindo(a) à Eleva.care. Este acordo explica, em linguagem simples, como trabalhamos quando você presta serviços na plataforma.
 
