--- a/src/content/payment-policies/pt-BR.mdx
+++ b/src/content/payment-policies/pt-BR.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 # Políticas de Pagamento
 
-_Data de vigência: 3 de junho de 2025_
+_Data de vigência: 31 de dezembro de 2025_
 
 > **Resumo Rápido**
 >
