--- a/src/content/terms/es.mdx
+++ b/src/content/terms/es.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 # Términos del Servicio
 
-_Fecha de vigencia:_ 16 de abril de 2025
+_Fecha de vigencia:_ 31 de diciembre de 2025
 
 Bienvenido a **Eleva.care** (operado por **Búzios e Tartarugas, Lda.**). Al usar Eleva.care, acepta estos Términos. Léelos con atención.
 
