--- a/src/content/terms/pt.mdx
+++ b/src/content/terms/pt.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 # Termos de Serviço
 
-_Data de vigência:_ 16 de abril de 2025
+_Data de vigência:_ 31 de dezembro de 2025
 
 Bem‑vindo à **Eleva.care** (operada por **Búzios e Tartarugas, Lda.**). Ao usar a Eleva.care, você aceita estes Termos. Leia com atenção.
 
