--- a/src/content/trust/dpa/es.mdx
+++ b/src/content/trust/dpa/es.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 # Acuerdo de Tratamiento de Datos (DPA)
 
-_Fecha de vigencia: 16 de abril de 2025_
+_Fecha de vigencia: 31 de diciembre de 2025_
 
 > **Resumen Rápido**
 >
