--- a/src/content/trust/dpa/pt.mdx
+++ b/src/content/trust/dpa/pt.mdx
@@ -12,7 +12,7 @@ export const metadata = {
 
 # Acordo de Tratamento de Dados (DPA)
 
-_Data de vigência: 16 de abril de 2025_
+_Data de vigência: 31 de dezembro de 2025_
 
 > **Resumo Rápido**
 >
