--- a/src/content/trust/security/es.mdx
+++ b/src/content/trust/security/es.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 # Seguridad
 
-_Última actualización: 1 de octubre de 2025_
+_Última actualización: 31 de diciembre de 2025_
 
 > **Resumen Rápido**
 >
