--- a/src/content/trust/security/pt-BR.mdx
+++ b/src/content/trust/security/pt-BR.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 # Segurança
 
-_Última atualização: 1 de outubro de 2025_
+_Última atualização: 31 de dezembro de 2025_
 
 > **Resumo Rápido**
 >
