--- a/src/content/cookie/es.mdx
+++ b/src/content/cookie/es.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 # Política de Cookies
 
-_Fecha de vigencia: 16 de abril de 2025_
+_Fecha de vigencia: 31 de diciembre de 2025_
 
 Usamos pocas cookies para que Eleva.care funcione de forma fiable y segura. Aquí explicamos qué usamos y cómo controlarlo.
 
