--- a/src/content/expert-agreement/es.mdx
+++ b/src/content/expert-agreement/es.mdx
@@ -12,7 +12,7 @@ export const metadata = {
 
 # Acuerdo de Servicios para Expertos
 
-_Fecha de vigencia: 16 de abril de 2025_
+_Fecha de vigencia: 31 de diciembre de 2025_
 
 Bienvenido/a a Eleva.care. Este acuerdo explica, en lenguaje claro, cómo colaboramos cuando ofrece servicios en nuestra plataforma.
 
