--- a/src/content/privacy/es.mdx
+++ b/src/content/privacy/es.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 # Política de Privacidad
 
-_Fecha de vigencia: 16 de abril de 2025_
+_Fecha de vigencia: 31 de diciembre de 2025_
 
 > **Resumen Rápido**
 >
